# routes/bookRoutes.js
@@ -2,6 +2,8 @@ const express = require('express');
 const router = express.Router();
 const controller = require('../controllers/bookController');
 const validate = require('../middleware/validate'); 
+const { isAuthenticated } = require('../middleware/authMiddleware');
+
 
 // GET all books
 router.get('/', 
@@ -21,20 +23,23 @@ router.get('/:id',
 router.post('/', 
   /* #swagger.tags = ['Books']
   #swagger.path = '/api/books'*/
-  validate.book, 
+  validate.book,
+  isAuthenticated, 
   controller.create
 );
 
 // PUT update a book
 router.put('/:id', 
   /* #swagger.tags = ['Books']*/
-  validate.book, 
+  validate.book,
+   isAuthenticated,  
   controller.update
 );
 
 // DELETE a book
 router.delete('/:id', 
   /*#swagger.tags = ['Books']*/
+   isAuthenticated, 
   controller.remove
 );
 
