# swagger.json
@@ -5,15 +5,26 @@
     "description": "Users API",
     "version": "1.0.0"
   },
-  "host": "cse-w0304-project2.onrender.com",
+  "host": "localhost:3000",
   "basePath": "/",
-  "schemes": ["https"],
+  "schemes": ["http"],
+  "securityDefinitions": {
+    "cookieAuth": {
+      "type": "apiKey",
+      "in": "cookie",
+      "name": "connect.sid"
+    }
+  },
+  "security": [
+    {
+      "cookieAuth": []
+    }
+  ],
   "paths": {
     "/api/books": {
       "get": {
         "tags": ["Books"],
         "summary": "Get all books",
-        "description": "",
         "produces": ["application/json"],
         "responses": {
           "200": { "description": "OK" },
@@ -23,7 +34,6 @@
       "post": {
         "tags": ["Books"],
         "summary": "Create a new book",
-        "description": "",
         "consumes": ["application/json"],
         "produces": ["application/json"],
         "parameters": [
@@ -43,7 +53,8 @@
         ],
         "responses": {
           "201": { "description": "Created" },
-          "400": { "description": "Bad Request" }
+          "400": { "description": "Bad Request" },
+          "401": { "description": "Unauthorized" }
         }
       }
     },
@@ -94,7 +105,8 @@
         "responses": {
           "200": { "description": "OK" },
           "400": { "description": "Bad Request" },
-          "404": { "description": "Not Found" }
+          "404": { "description": "Not Found" },
+          "401": { "description": "Unauthorized" }
         }
       },
       "delete": {
@@ -111,7 +123,8 @@
         "responses": {
           "200": { "description": "OK" },
           "400": { "description": "Bad Request" },
-          "404": { "description": "Not Found" }
+          "404": { "description": "Not Found" },
+          "401": { "description": "Unauthorized" }
         }
       }
     },
@@ -144,7 +157,8 @@
         ],
         "responses": {
           "201": { "description": "Created" },
-          "400": { "description": "Bad Request" }
+          "400": { "description": "Bad Request" },
+          "401": { "description": "Unauthorized" }
         }
       }
     },
@@ -192,7 +206,8 @@
         "responses": {
           "200": { "description": "OK" },
           "400": { "description": "Bad Request" },
-          "404": { "description": "Not Found" }
+          "404": { "description": "Not Found" },
+          "401": { "description": "Unauthorized" }
         }
       },
       "delete": {
@@ -209,7 +224,8 @@
         "responses": {
           "200": { "description": "OK" },
           "400": { "description": "Bad Request" },
-          "404": { "description": "Not Found" }
+          "404": { "description": "Not Found" },
+          "401": { "description": "Unauthorized" }
         }
       }
     }
